fix issue with filters alignment

--- a/scss/components/_filters.scss
+++ b/scss/components/_filters.scss
@@ -16,6 +16,7 @@
       font-weight: bold;
       text-transform: uppercase;
       color: #7A8CA1;
+      vertical-align: top;
     }
     .form-control, select {
       height: 28px;
